# QEdge6G

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: benchmark_smoke.yml  ci.yml  tests.yml
configs/: base.yaml  benchmark_sensitivity.json  benchmark_sensitivity_smoke.json
configs/ml/: congestion_predictor.yaml  demand_forecast.yaml
configs/simulation/: backhaul_bottleneck.yaml  edge_overload.yaml  mixed_workload_classes.yaml  mobility_event.yaml  partial_link_degradation.yaml  tcp_bursty.yaml  tenant_slicing.yaml  trace_replay.yaml  wireless_dense.yaml
configs/solver/: annealing.yaml  greedy.yaml  ilp.yaml  qaoa.yaml  qubo.yaml
data/metadata/: README.md
data/raw/: sample_edge_trace.csv
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  benchmark_protocol.md  experiment_log.md  failure_analysis.md  qubo_formulation.md  system_assumptions.md
notebooks/: 01_data_exploration.ipynb  02_qubo_validation.ipynb  03_baseline_comparison.ipynb  04_failure_case_analysis.ipynb
results/tables/: edge_overload.csv  edge_overload_smoke.csv  mobility_event.csv  sensitivity_sweep.csv  smoke_wireless_dense.csv  tcp_bursty.csv  tenant_slicing.csv  trace_replay.csv  wireless_dense.csv
scripts/: profile_runtime.sh  replay_trace.sh  run_ablation.sh  run_benchmarks.sh  run_sensitivity_sweep.sh  run_simulation.sh  train_predictors.sh
src/: __init__.py  cli.py
src/analysis/: __init__.py  ablation.py  bottleneck_analysis.py  failure_cases.py  fairness_analysis.py  (+1 more)
tests/: conftest.py
(+95 files in other folders)
